[JDK8] Don't use permgen anymore