@@ -51,7 +51,6 @@ $JAVA_OPTS = @()
 # JVM memory allocation pool parameters - modify as appropriate.
 $JAVA_OPTS += '-Xms64M'
 $JAVA_OPTS += '-Xmx512M'
-$JAVA_OPTS += '-XX:MaxPermSize=256M'
 
 # Reduce the RMI GCs to once per hour for Sun JVMs.
 $JAVA_OPTS += '-Dsun.rmi.dgc.client.gcInterval=3600000'
